--- a/db_merger.csproj
+++ b/db_merger.csproj
@@ -53,7 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="obj_db.cs" />
+    <Compile Include="Formats\obj_db.cs" />
+    <Compile Include="Formats\txt_db.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
