--- a/db_merger.csproj
+++ b/db_merger.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Formats\obj_db.cs" />
+    <Compile Include="Formats\spr_db.cs" />
     <Compile Include="Formats\txt_db.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
